Inclusion of Interface.cpp in the tasks.json fot building the project

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,6 +11,7 @@
 				"Player.cpp",
 				"AIPlayer.cpp",
 				"Ships.cpp",
+				"Interface.cpp",
 				"-o",
 				"${fileDirname}\\${fileBasenameNoExtension}.exe"
 			],
