Separating Ship-derived classes into their own files; added new .cpp files to build configuration: "tasks.json";

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,7 +10,11 @@
 				"${file}",
 				"Player.cpp",
 				"AIPlayer.cpp",
-				"Ships.cpp",
+				"Ship.cpp",
+				"Battleship.cpp",
+				"Carrier.cpp",
+				"Destroyer.cpp",
+				"PatrolBoat.cpp",
 				"Interface.cpp",
 				"-o",
 				"${fileDirname}\\${fileBasenameNoExtension}.exe"
