All ship classes are done, InterfaceIO done, save for two should-i-delete-them functions, IConsole.h done, save for the same two aforementioned functions. I'm really bad at writing commits lmao

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,7 +15,7 @@
 				"Carrier.cpp",
 				"Destroyer.cpp",
 				"PatrolBoat.cpp",
-				"Interface.cpp",
+				"IConsole.cpp",
 				"-o",
 				"${fileDirname}\\${fileBasenameNoExtension}.exe"
 			],
